<resources>
    <string name="app_name">Dishider</string>
    <string name="nutrients_title">Nutrient Scores</string>
    <string name="food_button">What should I eat?</string>
    <string name="option_nutrients"> Should I take into account your nutrient scores for your dish?</string>
    <string name="option_snack_all">I\'ll eat anything!</string>
    <string name="option_snack_snack">I want something light.</string>
    <string name="option_snack_meal">I want a full course!</string>
    <string name="option_vegan"> Should I suggest only vegan-friendly options?</string>
    <string name="option_generate">Let\'s eat!</string>
    <string name="option_retry_food">Try again</string>
    <string name="option_retry_food_without_nutrients">Next option</string>
    <string name="option_confirm_food">Let\'s eat!</string>
    <string name="add_dish">Add new dish!</string>

</resources>