<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.FoodOptions">

    <CheckBox
        android:id="@+id/nutrient_checkbox"
        android:layout_width="316dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/option_nutrients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/vegan_checkbox"
        android:layout_width="316dp"
        android:layout_height="61dp"
        android:layout_marginTop="252dp"
        android:text="@string/option_vegan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getFoodButton"
        android:layout_width="136dp"
        android:layout_height="65dp"
        android:text="@string/option_generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <RadioGroup
        android:id="@+id/snack_group"
        android:layout_width="224dp"
        android:layout_height="146dp"
        android:checkedButton="@id/snackoption_all"
        app:layout_constraintBottom_toTopOf="@+id/vegan_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrient_checkbox">

        <RadioButton
            android:id="@+id/snackoption_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/option_snack_all" />

        <RadioButton
            android:id="@+id/snackoption_snack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_snack_snack" />

        <RadioButton
            android:id="@+id/snackoption_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_snack_meal" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>